change wrong tips

--- a/camera/index.html
+++ b/camera/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 	<head>
-		<title>facetracking</title>
+		<title>基于WEB的面部识别</title>
 		<meta http-equiv="X-UA-Compatible" content="IE=Edge"/>
 		<meta charset="utf-8">
 		<style>
@@ -74,8 +74,8 @@
 			};
 			
 			supportMessages = {
-				"no getUserMedia" : "Unfortunately, <a href='http://dev.w3.org/2011/webrtc/editor/getusermedia.html'>getUserMedia</a> is not supported in your browser. Try <a href='http://www.opera.com/browser/'>downloading Opera 12</a> or <a href='http://caniuse.com/stream'>another browser that supports getUserMedia</a>. Now using fallback video for facedetection.",
-				"no camera" : "No camera found. Using fallback video for facedetection."
+				"no getUserMedia" : "你的浏览器不支持<a href='http://dev.w3.org/2011/webrtc/editor/getusermedia.html'>getUserMedia</a> 方法. 请使用 <a href='http://www.opera.com/browser/'>downloading Opera 12</a> 或其他 <a href='http://caniuse.com/stream'>支持getUserMedia的浏览器</a>.",
+				"no camera" : "没有找到用于面部识别的摄像头."
 			};
 			
 			document.addEventListener("headtrackrStatus", function(event) {
