change button tips

--- a/camera/index.html
+++ b/camera/index.html
@@ -39,10 +39,10 @@
 		<canvas id="debug" ></canvas>
 		
 		<p id='gUMMessage'></p>
-		<p>Status : <span id='headtrackerMessage'></span></p>
-		<p><input type="button" onclick="htracker.stop();htracker.start();" value="reinitiate facedetection"></input>
+		<p>提示 : <span id='headtrackerMessage'></span></p>
+		<p><input type="button" onclick="htracker.stop();htracker.start();" value="初始化摄像头状态"></input>
 		<br/><br/>
-		<input type="checkbox" onclick="showProbabilityCanvas()" value="asdfasd"></input>Show probability-map</p>
+		<input type="checkbox" onclick="showProbabilityCanvas()" value="asdfasd"></input>显示识别区域</p>
 		
 		<script>
 		  // set up video and canvas elements needed
