--- a/camera/index.html
+++ b/camera/index.html
@@ -65,12 +65,12 @@
 			// add some custom messaging
 			
 			statusMessages = {
-				"whitebalance" : "checking for stability of camera whitebalance",
-				"detecting" : "Detecting face",
-				"hints" : "Hmm. Detecting the face is taking a long time",
-				"redetecting" : "Lost track of face, redetecting",
-				"lost" : "Lost track of face",
-				"found" : "Tracking face"
+				"whitebalance" : "检测相机的白平衡稳定性中...",
+				"detecting" : "正在进行面部识别",
+				"hints" : "正保持面部识别状态中...",
+				"redetecting" : "没有识别到面部，重新检测中...",
+				"lost" : "没有识别到面部",
+				"found" : "识别到面部"
 			};
 			
 			supportMessages = {
