--- a/index.html
+++ b/index.html
@@ -2,40 +2,40 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset= UTF-8" />
-<title>WEB DEMO°¸ÀýÕ¹Ê¾</title>
+<title>WEB DEMOæ¡ˆä¾‹å±•ç¤º</title>
 <link href="css/lrtk.css" rel="stylesheet" type="text/css" />
 <script type="text/javascript" src="js/jquery.1.4.2.min.js"></script>
 <script type="text/javascript" src="js/lrtk.js"></script>
 </head>
 <body>
-<!-- ´úÂë ¿ªÊ¼ -->
+<!-- ä»£ç  å¼€å§‹ -->
 <div class="common">
   <ul>
     <li class="listbox mr20">
-      <div class="listimg"> <a href="guitar" title="¼ªËûdemo" target="_blank"><img src="images/01.jpg" class="attachment-thumbnail wp-post-image" alt="¼ªËûdemo" /></a>
+      <div class="listimg"> <a href="guitar" title="å‰ä»–demo" target="_blank"><img src="images/01.jpg" class="attachment-thumbnail wp-post-image" alt="å‰ä»–demo" /></a>
         <div class="summary">
           <div class="summarytxt">
-            <p>¿ÉÌæ»»Áã²¿¼þ¡¢²ÄÖÊµÄÈýÎ¬¼ªËûÄ£ÐÍ</p>
+            <p>å¯æ›¿æ¢é›¶éƒ¨ä»¶ã€æè´¨çš„ä¸‰ç»´å‰ä»–æ¨¡åž‹</p>
           </div>
         </div>
       </div>
       <div class="listinfo">
-        <div class="listtitle"><a href="guitar" title="¼ªËûdemo" target="_blank">¼ªËûÄ£ÐÍ</a></div>
+        <div class="listtitle"><a href="guitar" title="å‰ä»–demo" target="_blank">å‰ä»–æ¨¡åž‹</a></div>
       </div>
     </li>
 	
 	 <li class="listbox mr20">
-      <div class="listimg"> <a href="http://car.sv3d.cn" title="Æû³µdemo" target="_blank"><img src="images/01.jpg" class="attachment-thumbnail wp-post-image" alt="Æû³µdemo" /></a>
+      <div class="listimg"> <a href="http://car.sv3d.cn" title="æ±½è½¦demo" target="_blank"><img src="images/01.jpg" class="attachment-thumbnail wp-post-image" alt="æ±½è½¦demo" /></a>
         <div class="summary">
           <div class="summarytxt">
-            <p>¿ÉÌæ»»³µÐÍ¡¢³µÉíÑÕÉ«¡¢±³¾°³¡¾°µÄÈýÎ¬Æû³µÕ¹Ê¾</p>
+            <p>å¯æ›¿æ¢è½¦åž‹ã€è½¦èº«é¢œè‰²ã€èƒŒæ™¯åœºæ™¯çš„ä¸‰ç»´æ±½è½¦å±•ç¤º</p>
           </div>
         </div>
       </div>
       <div class="listinfo">
-        <div class="listtitle"><a href="car.sv3d.cn"  title="Æû³µdemo" target="_blank">Æû³µÈýÎ¬Õ¹Ê¾</a></div>
-		<div class="listother">ÆäËû°æ±¾£º
-		<a href="car" target="_blank">ÊÖ»úVR°æ</a> <a href="car/vive.html" target="_blank">HTC VIVE VR°æ</a>
+        <div class="listtitle"><a href="car.sv3d.cn"  title="æ±½è½¦demo" target="_blank">æ±½è½¦ä¸‰ç»´å±•ç¤º</a></div>
+		<div class="listother">å…¶ä»–ç‰ˆæœ¬ï¼š
+		<a href="car" target="_blank">æ‰‹æœºVRç‰ˆ</a> <a href="car/vive.html" target="_blank">HTC VIVE VRç‰ˆ</a>
 		</div>
       </div>
     </li>
@@ -44,7 +44,7 @@
     
   </ul>
 </div>
-<!-- ´úÂë ½áÊø -->
+<!-- ä»£ç  ç»“æŸ -->
 
 
 </body>
