move frontpage files to frontpage docs

--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset= UTF-8" />
 <title>WEB DEMO案例展示</title>
-<link href="css/lrtk.css" rel="stylesheet" type="text/css" />
-<script type="text/javascript" src="js/jquery.1.4.2.min.js"></script>
-<script type="text/javascript" src="js/lrtk.js"></script>
+<link href="frontpage/css/lrtk.css" rel="stylesheet" type="text/css" />
+<script type="text/javascript" src="frontpage/js/jquery.1.4.2.min.js"></script>
+<script type="text/javascript" src="frontpage/js/lrtk.js"></script>
 </head>
 <body>
 <!-- 代码 开始 -->
 <div class="common">
   <ul>
     <li class="listbox mr20">
-      <div class="listimg"> <a href="guitar" title="吉他demo" target="_blank"><img src="images/01.jpg" class="attachment-thumbnail wp-post-image" alt="吉他demo" /></a>
+      <div class="listimg"> <a href="guitar" title="吉他demo" target="_blank"><img src="frontpage/images/01.jpg" class="attachment-thumbnail wp-post-image" alt="吉他demo" /></a>
         <div class="summary">
           <div class="summarytxt">
             <p>可替换零部件、材质的三维吉他模型</p>
@@ -25,7 +25,7 @@
     </li>
 	
 	 <li class="listbox mr20">
-      <div class="listimg"> <a href="http://car.sv3d.cn" title="汽车demo" target="_blank"><img src="images/01.jpg" class="attachment-thumbnail wp-post-image" alt="汽车demo" /></a>
+      <div class="listimg"> <a href="http://car.sv3d.cn" title="汽车demo" target="_blank"><img src="frontpage/images/01.jpg" class="attachment-thumbnail wp-post-image" alt="汽车demo" /></a>
         <div class="summary">
           <div class="summarytxt">
             <p>可替换车型、车身颜色、背景场景的三维汽车展示</p>
