--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <div class="common">
   <ul>
     <li class="listbox mr20">
-      <div class="listimg"> <a href="guitar" title="吉他demo" target="_blank"><img src="frontpage/images/01.jpg" class="attachment-thumbnail wp-post-image" alt="吉他demo" /></a>
+      <div class="listimg"> <a href="guitar" title="吉他demo" target="_blank"><img src="frontpage/images/guitar.png" class="attachment-thumbnail wp-post-image" alt="吉他demo" /></a>
         <div class="summary">
           <div class="summarytxt">
             <p>可替换零部件、材质的三维吉他模型</p>
@@ -25,7 +25,7 @@
     </li>
 	
 	 <li class="listbox mr20">
-      <div class="listimg"> <a href="http://car.sv3d.cn" title="汽车demo" target="_blank"><img src="frontpage/images/01.jpg" class="attachment-thumbnail wp-post-image" alt="汽车demo" /></a>
+      <div class="listimg"> <a href="car" title="汽车demo" target="_blank"><img src="frontpage/images/01.jpg" class="attachment-thumbnail wp-post-image" alt="汽车demo" /></a>
         <div class="summary">
           <div class="summarytxt">
             <p>可替换车型、车身颜色、背景场景的三维汽车展示</p>
@@ -33,9 +33,9 @@
         </div>
       </div>
       <div class="listinfo">
-        <div class="listtitle"><a href="car.sv3d.cn"  title="汽车demo" target="_blank">汽车三维展示</a></div>
+        <div class="listtitle"><a href="car"  title="汽车demo" target="_blank">汽车三维展示</a></div>
 		<div class="listother">其他版本：
-		<a href="car" target="_blank">手机VR版</a> <a href="car/vive.html" target="_blank">HTC VIVE VR版</a>
+		<a href="car/mobile.html" target="_blank">手机VR版</a> <a href="car/vive.html" target="_blank">HTC VIVE VR版</a>
 		</div>
       </div>
     </li>
