--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
         </div>
       </div>
       <div class="listinfo">
-        <div class="listtitle"><a href="guitar" title="吉他demo" target="_blank">吉他模型</a></div>
+        <div class="listtitle"><a href="guitar" title="吉他demo" target="_blank">可配置吉他</a></div>
       </div>
     </li>
 	
 	 <li class="listbox mr20">
-      <div class="listimg"> <a href="car" title="汽车demo" target="_blank"><img src="frontpage/images/01.jpg" class="attachment-thumbnail wp-post-image" alt="汽车demo" /></a>
+      <div class="listimg"> <a href="car" title="汽车demo" target="_blank"><img src="frontpage/images/car.png" class="attachment-thumbnail wp-post-image" alt="汽车demo" /></a>
         <div class="summary">
           <div class="summarytxt">
             <p>可替换车型、车身颜色、背景场景的三维汽车展示</p>
