--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       </div>
     </li>
 	
-	<li class="listbox mr20">
+	<!--li class="listbox mr20">
       <div class="listimg"> <a href="camera" title="面部识别" target="_blank"><img src="frontpage/images/camera.png" class="attachment-thumbnail wp-post-image" alt="面部识别" /></a>
         <div class="summary">
           <div class="summarytxt">
@@ -51,7 +51,7 @@
       <div class="listinfo">
         <div class="listtitle"><a href="camera" title="面部识别" target="_blank">简单面部识别</a></div>
       </div>
-    </li>
+    </li-->
 	
 	
     
